# sockspp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: buffer.cxx.69216E37244AC854.idx  buffer.hpp.695816F6ED88B87F.idx  cli.cxx.46FA79A446D44CA6.idx  client_socket.cxx.B4F2469794C5C61E.idx  client_socket.hpp.9A71901A986951FD.idx  epoll_poller.hpp.C9673D8FB24463B9.idx  errno.hpp.1571C606EB05560D.idx  event.hpp.230FEEB50DB8401A.idx  exceptions.hpp.7370DBA3ADEECB24.idx  log.hpp.3A507CAB843BFEF1.idx  main.cxx.90767FF26E2C5849.idx  poller.hpp.260250B9B6C3001D.idx  remote_socket.cxx.95475A021D7F7D03.idx  remote_socket.hpp.BF4EA232994C46DC.idx  server.cxx.FEDB3A61015DD452.idx  server.hpp.3EA0D09D7737B118.idx  server_params.hpp.E13A8F8EE8E5F87D.idx  session.cxx.1963C44F6B803D90.idx  session.hpp.3CC0B315C7920C02.idx  session_socket.hpp.325BFD97BB7804BD.idx  socket.cxx.C614EDEA4D053059.idx  socket.hpp.C6E3F6FB4E1D37D7.idx  wepoll.c.24BA7264C4CFE9DE.idx  wepoll.h.02279FF2BC565603.idx
src/core/: CMakeLists.txt
src/core/src/dnslib/: rr.cpp  rr.h
src/core/src/sockspp/core/: buffer.cxx  buffer.hpp  errno.hpp  exceptions.hpp  ip_address.cxx  ip_address.hpp  log.hpp  memory_buffer.hpp  s5.cxx  s5.hpp  s5_enums.hpp  socket.cxx  socket.hpp  utils.cxx  utils.hpp
src/core/src/sockspp/core/poller/: epoll_poller.hpp  event.hpp  poller.hpp
src/server/: CMakeLists.txt
src/server/src/sockspp/server/: client_socket.cxx  client_socket.hpp  defs.hpp  dns_socket.cxx  dns_socket.hpp  remote_socket.cxx  remote_socket.hpp  server.cxx  server.hpp  server_hook.hpp  server_params.hpp  session.cxx  session.hpp  session_socket.hpp  udp_socket.cxx  udp_socket.hpp  utils.cxx  utils.hpp
src/server_cli/: CMakeLists.txt
src/server_cli/src/: cli.cxx  main.cxx
